tests/baselines/reference/parserForOfStatement6.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts (1 errors) ====
    for (var a = 1, b = 2 of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }